--- a/src/modules/menu/components/profile-menu/styles/utils/_mixins.scss
+++ b/src/modules/menu/components/profile-menu/styles/utils/_mixins.scss
@@ -1,3 +1,90 @@
+@mixin menuControls($config) {
+
+    .wlc-profile-menu {
+
+        &__controls {
+            position: absolute;
+            top: ef.get-value($config, 'controlsTop');
+            left: ef.get-value($config, 'controlsLeft');
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
+        &__control {
+            position: relative;
+            display: flex;
+            align-items: ef.get-value($config, 'controlAlignItems');
+            width: ef.get-value($config, 'controlWidth');
+            height: ef.get-value($config, 'controlHeight');
+            padding: ef.get-value($config, 'controlPadding');
+            color: ef.get-value($config, 'controlArrowColor');
+            background: none;
+            cursor: pointer;
+            border: none;
+            transition: ef.get-value($config, 'controlTransition');
+            pointer-events: initial;
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+                background: ef.get-value($config, 'controlBg');
+            }
+
+            &:disabled {
+                display: none;
+            }
+
+            .wlc-icon {
+                display: block;
+                line-height: 1;
+                transform: ef.get-value($config, 'controlArrowTransform');
+            }
+
+            svg {
+                transform: var(--wlc-main-menu-svg-transform, none);
+                fill: currentColor;
+            }
+
+            &--prev {
+                justify-content: ef.get-value($config, 'controlPrevJustifyContent');
+                margin: ef.get-value($config, 'controlPrevMargin');
+
+                svg {
+                    transform: ef.get-value($config, 'controlPrevSvgTransform');
+                }
+            }
+
+            &--next {
+                justify-content: ef.get-value($config, 'controlNextJustifyContent');
+                margin: ef.get-value($config, 'controlNextMargin');
+
+                &:before {
+                    transform: scaleX(-1);
+                }
+
+                svg {
+                    transform: ef.get-value($config, 'controlNextSvgTransform');
+                }
+            }
+
+            @include bm.hover {
+                color: ef.get-value($config, 'controlArrowColorHover');
+            }
+        }
+    }
+}
+
 @function str-replace($string, $search, $replace: '') {
     $index: str-index($string, $search);
 
